--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
   background-color: #f8f5f2;
 }
 
-.app-container {
+.app-container, .about-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -174,6 +174,29 @@ h2 {
 
 .logout-btn:hover {
   background-color: #d95c1b;
+}
+
+.about-container>div>h1, .about-container>div>h2 {
+  color: #1c1c1c;
+}
+
+.about-container>div>h1 {
+  font-size: 2.5rem;
+  margin-top: 2rem;
+  margin-left: 2rem;
+}
+
+.about-container>div>h2 {
+  font-size: 1.75rem;
+  margin-left: 2rem;
+}
+
+.about-container>div>p {
+  width: 80%;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  margin-top: 0.5rem;
+  margin-left: 2.5rem;
 }
 
 @media (max-width: 768px) {
